--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.matacos.mataco">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".apiController.BackendVolley"
@@ -22,10 +22,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".OfertaAcademicaActivity"
-            android:label="@string/title_activity_oferta_academica"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:name=".SubjectsActivity"
+            android:label="@string/title_activity_subjects"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".CoursesActivity"></activity>
     </application>
 
 </manifest>
