#24 Begun creating the list #21 Initial creation of the request failing #24 Begun creating the layout for a course #20 Begun creating the Adapter #19 Begun creating the Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,11 @@
             android:name=".SubjectsActivity"
             android:label="@string/title_activity_subjects"
             android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".CoursesActivity"></activity>
+        <activity
+            android:name=".CoursesActivity"
+            android:label="@string/title_activity_courses"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
