--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,10 @@
             android:name=".ExamSubjectsActivity"
             android:label="@string/title_activity_exam_subjects"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".ExamsActivity"
+            android:label="@string/title_activity_exams"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
