--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     package="com.matacos.mataco">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name=".apiController.BackendVolley"
@@ -15,6 +17,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <provider
+            android:name=".TemplatePDFK"
+            android:authorities="${applicationId}.my.package.name.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
+
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name">
@@ -78,6 +90,18 @@
             android:name=".ExamSubjectsSelectCareerActivity"
             android:label="@string/title_activity_exam_subjects_select_career"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".SurveySubjectsActivity"
+            android:label="@string/title_activity_survey_subjects"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".CertificateActivity"
+            android:label="@string/title_activity_certificate"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".SurveyActivity"
+            android:label="@string/title_activity_survey">
+        </activity>
     </application>
 
 </manifest>
